examples/test/testpolicy3064.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3064
  namespace: namespace403
spec:
  podSelector:
    matchLabels:
      key16: value35
      key35: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value41
      podSelector:
        matchLabels:
          key27: value3
          key46: value40
          key33: value33
